--- a/src/it/gruppovye-politiki-active-directory.htm
+++ b/src/it/gruppovye-politiki-active-directory.htm
@@ -43,16 +43,14 @@
 <meta property="og:image" content="https://1cloud.ru/img/logo.png" />
 <meta property="og:image:secure_url" content="https://1cloud.ru/img/logo.png" />
 <meta property="og:image:type" content="image/png" />
-<meta property="og:image:width" content="135" />
+<meta property="og:image:width" content="1
 <meta property="og:image:height" content="41" />
 <meta property="og:image:alt" content="1cloud logo" />
     <link rel="canonical" href="https://1cloud.ru/help/windows/gruppovye-politiki-active-directory" />
     <title>Инструкция по работе с групповыми политиками Active Directory</title>
     <meta name="keywords" content="Active Directory, Windows Server." />
         <meta name="description" content="Что такое групповые политики Active Directory (AD GPO) и как ими управлять. Возможности GPO - создание, удаление и поиск объектов групповой политики" />
-
     <link rel="amphtml" href="/help/amp/windows/gruppovye-politiki-active-directory" />
-
 
     <script type="application/ld+json">
         {
